--- a/organizerApp/package.json
+++ b/organizerApp/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
   }
 }
